src/Tests/Error/AssertError.php
<?php

namespace ColdBolt\Tests\Error;

class AssertError extends \AssertionError
{
}
